---
source: crates/embucket-functions/src/tests/string_binary/hex_encode.rs
description: "\"SELECT\n        HEX_ENCODE('\\n') AS newline,\n        HEX_ENCODE('\\t') AS tab,\n        HEX_ENCODE('\\r') AS carriage_return\""
---
Ok(
    [
        "+---------+-----+-----------------+",
        "| newline | tab | carriage_return |",
        "+---------+-----+-----------------+",
        "| 0A      | 09  | 0D              |",
        "+---------+-----+-----------------+",
    ],
)
